OpenShift/github-license-sharing-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: github-license-sharing
  namespace: tools-services-dev  
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
    # - type: ImageChange
    #   imageChangeParams:
    #     automatic: true
    #     containerNames:
    #       - github-events-master
    #     from:
    #       kind: ImageStreamTag
    #       namespace: tools-services-dev
    #       name: 'github-events-master:latest'
  replicas: 1
  selector:
    name: github-license-sharing
  template:
    metadata:
      labels:
        app: github-license-sharing
        name: github-license-sharing
    spec:
      containers:
        - name: github-license-sharing
          image: isl-dsdc.ca.com:5000/ca/tools/github-license-sharing:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '300m'
              memory: 1Gi
            requests:
              cpu: 1m
              memory: 1Mi
