OpenShift/github-events-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-events-master      
spec:
  selector:                  
    app: github-events-master
  ports:
  - nodePort: 0
    port: 4000               
    protocol: TCP
    targetPort: 4000
