OpenShift/github-license-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-license-manager
spec:
  selector:                  
    app: github-license-manager
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: ajp
      protocol: TCP
      port: 8009
      targetPort: 8009
