OpenShift/github-license-sharing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-license-sharing
spec:
  selector:                  
    app: github-license-sharing
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
