OpenShift/github-license-manager-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: github-license-manager
spec:
  to:
    kind: Service
    name: github-license-manager
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
