OpenShift/github-license-sharing-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: github-license-sharing
spec:
  to:
    kind: Service
    name: github-license-sharing
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
